# TFG_Code

Back_end/connect_four/: .gitignore
Back_end/connect_four/src/: main.rs  pointers.rs
Back_end/inventory_api/: .gitignore  Cargo.toml
Back_end/inventory_api/src/: db.rs  log.rs  main.rs  routes.rs
Back_end/inventory_api/src/entities/: ancestors.rs  group.rs  image.rs  images.rs  item.rs  log.rs  mod.rs  property.rs  search.rs  tree.rs  user.rs  user_group.rs  zone.rs
Back_end/inventory_api/src/middleware/: auth.rs
Back_end/inventory_api/test/: test_user.rs
DataBase/: groups.js  items.js  logs.js  manage.py  populate_database.py  properties.js  zones.js
DataBase_MongoDB/: populate_database.py
DataBase_MongoDB/schemas/: groups.js  items.js  logs.js  properties.js  userGroup.js  user_groups.js  users.js  zones.js
Front_end/InventoryApp/: .gitignore  App.js  app.json  babel.config.js  package.json
Front_end/InventoryApp/src/components/: BreadcrumbNavigation.js  CustomDrawer.js  EntityForm.js  EntityPanel.js  SwipeablePanel.js
Front_end/InventoryApp/src/context/: AuthContext.js  ThemeContext.js
Front_end/InventoryApp/src/navigation/: AppNavigator.js  MainNavigator.js
Front_end/InventoryApp/src/screens/: AuthScreen.js  GroupDetailScreen.js  GroupsScreen.js  LoadingScreen.js  LogsScreen.js  MainScreen.js  UserScreen.js  UsersScreen.js
Front_end/InventoryApp/src/services/: api.js
Front_end/InventoryApp/src/utils/: idUtils.js  password.js
Front_end/prueba1/: README.md  pubspec.yaml
Front_end/prueba1/lib/src/localization/: app_en.arb
